<resources>
    <string name="app_name">HW3.2.1</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_div">/</string>
    <string name="button_mult">*</string>
    <string name="button_result">=</string>
    <string name="button_clear">C</string>
    <string name="button_change">+/-</string>
    <string name="button_percent">%</string>
    <string name="text_n">N</string>
    <string name="text_o">O</string>
    <string name="text_v">V</string>
    <string name="text_a">A</string>
    <string name="text_e">E</string>
    <string name="text_l">L</string>
    <string name="text_p">P</string>
</resources>
